Help and some code formatting.